# customer-lifetime-value-forecasting

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
dashboards/: app.py
data/: causal_balance_table.csv  causal_results.csv  customer_segments.csv  ltv_predictions.csv  marketing_interventions.csv  revenue_daily.csv  revenue_forecasts_by_channel.csv  revenue_forecasts_by_segment.csv  revenue_forecasts_overall.csv  revenue_weekly.csv  transactions.csv
notebooks/: 01_eda.ipynb  02_ltv_modeling.ipynb  03_revenue_forecasting.ipynb  04_experimentation_causal_inference.ipynb
reports/: causal_summary.md  final_report.md
scripts/: build_final_report.py  render_preview_assets.py  run_all.py  run_causal_pipeline.py  run_forecasting_pipeline.py  run_ltv_pipeline.py
src/: __init__.py  experiments.py  forecasting.py  ltv_model.py
tests/: test_causal_outputs.py  test_forecast_outputs.py  test_ltv_outputs.py
