[project]
name = "customer-lifetime-value-forecasting"
version = "0.1.0"
description = "Production-ready CLV forecasting, revenue outlooks, and marketing incrementality toolkit."
authors = ["Rohit Somisetty"]
requires-python = ">=3.10"
dependencies = []

[tool.black]
target-version = ["py310"]
line-length = 100
extend-exclude = [
  "notebooks",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["notebooks"]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
